# melcloudhome

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  SUPPORTED_DEVICES.md  hacs.json  pyproject.toml
.github/workflows/: release.yml  validate.yml
custom_components/melcloudhome/: climate.py  climate_atw.py  const.py  coordinator.py  diagnostics_atw.py  manifest.json  sensor_atw.py  telemetry_tracker.py
custom_components/melcloudhome/api/: auth.py  client.py  models.py  models_atw.py
custom_components/melcloudhome/translations/: el.json  en.json  fi.json  fr.json  nl.json
docs/: entities.md
docs/api/: atw-api-reference.md
tests/api/: test_atw_models.py  test_auth.py  test_auth_security.py  test_client.py  test_client_validation.py  test_multi_building.py
tests/integration/: conftest.py  test_climate_atw_zone2.py  test_outdoor_temperature_sensor.py
tools/: debug_energy_api.py  deploy_custom_component.py  mock_melcloud_server.py  test_energy_endpoint.py
