[project]
name = "melcloudhome-integration"
version = "0.1.0"
description = "Home Assistant custom component for MELCloud Home"
authors = [
    { name = "Andrew Blake", email = "github@blakenet.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "aiohttp-cors>=0.8.1",
    "playwright>=1.56.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable linting rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
]

# Ignore specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["custom_components.melcloudhome"]
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true

# Relax strictness for specific paths
[[tool.mypy.overrides]]
module = "custom_components.melcloudhome.api.*"
disallow_untyped_calls = false
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = [
    "custom_components.melcloudhome.__init__",
    "custom_components.melcloudhome.config_flow",
    "custom_components.melcloudhome.coordinator",
    "custom_components.melcloudhome.climate"
]
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tools.*"
disallow_untyped_decorators = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[tool.codespell]
skip = '*.json,*.yaml,.git'
ignore-words-list = 'hass'

[tool.pytest.ini_options]
markers = [
    "e2e: marks tests as end-to-end (requires mock server via Docker Compose)",
]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    # NOTE: homeassistant-stubs NOT included as dev dependency due to unsolvable
    # dependency conflicts with aiohttp, vcrpy, and voluptuous versions.
    # This is a known limitation for custom component development outside the HA Core monorepo.
    # Integration files use lazy imports and mypy overrides to allow testing API client independently.
    # Integration testing happens via deployment to actual HA instance.
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest-recording>=0.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.14.5",
    "vcrpy>=7.0.0",
    "voluptuous>=0.15.0",
    "freezegun>=1.5.5",
]
reverse-engineering = [
    "mitmproxy>=12.2.2",
]

[tool.coverage.paths]
source = [
    "custom_components/melcloudhome",
    "/app/custom_components/melcloudhome",
]

[tool.coverage.run]
source = ["custom_components/melcloudhome"]
relative_files = true
